// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for XtremepushActionsDestination's track destination action: all fields 1`] = `
Object {
  "anonymousId": "%@Ce4WScHI00bcI0JLt",
  "email": "robmieva@ehaipvok.cr",
  "event": "%@Ce4WScHI00bcI0JLt",
  "messageId": "%@Ce4WScHI00bcI0JLt",
  "phone": "%@Ce4WScHI00bcI0JLt",
  "properties": Object {
    "testType": "%@Ce4WScHI00bcI0JLt",
  },
  "timestamp": "%@Ce4WScHI00bcI0JLt",
  "type": "%@Ce4WScHI00bcI0JLt",
  "userId": "%@Ce4WScHI00bcI0JLt",
}
`;

exports[`Testing snapshot for XtremepushActionsDestination's track destination action: required fields 1`] = `
Object {
  "event": "%@Ce4WScHI00bcI0JLt",
  "messageId": "%@Ce4WScHI00bcI0JLt",
  "timestamp": "%@Ce4WScHI00bcI0JLt",
  "type": "%@Ce4WScHI00bcI0JLt",
}
`;
